优化webhook回调事件及文档

--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -1,49 +1,58 @@
 # back
 
-| 环境变量                               | 用途                                                              | 默认值                     |
-| -------------------------------------- | ----------------------------------------------------------------- | -------------------------- |
-| **应用（app.js）**                     |                                                                   |                            |
-| TMW_APP_NAME                           | 后端服务名称。                                                    | tms-mongodb-web            |
-| TMW_APP_PORT                           | 后端服务端口 。                                                   | 3000                       |
-| TMW_APP_ROUTER_AUTH                    | 后端服务认证接口前缀。                                            | auth                       |
-| TMW_APP_ROUTER_CONTROLLER              | 后端服务控制器接口前缀。                                          | api                        |
-| TMW_APP_ROUTER_PLUGIN                  |                                                                   | plugin                     |
-| TMW_APP_ROUTER_FSDOMAIN                |                                                                   | fs                         |
-| TMW_APP_AUTH_JWT_KEY                   | JWT 认证方式的服务端私有密钥。                                    | 随机值                     |
-| TMW_APP_AUTH_JWT_EXPIRESIN             | JWT 认证方式的服务端 token 有效期。                               | 3600                       |
-| TMW_APP_AUTH_CAPTCHA_DISABLED          | 是否关闭验证码功能，值为`true`或`yes`时关闭，不区分大小写。       | 开启                       |
-| TMW_APP_AUTH_CAPTCHA_STORAGE           | 验证码存储类型，支持：`redis\lowdb`。                             | lowdb                      |
-| TMW_APP_AUTH_CAPTCHA_REDIS_NAME        | 如果使用`redis`存储验证码，对应的`redis`连接名称。                | master                     |
-| TMW_APP_AUTH_CLIENT_DISABLED           | 是否开启账号管理模块功能，值为`true`或`yes`时关闭，不区分大小写。 | 开启                       |
-| TMW_APP_AUTH_CLIENT_MONGODB_NAME       | 存储账号数据的`mongodb`在`mongodb.js`中的名称。                   | master                     |
-| TMW_APP_AUTH_CLIENT_MONGODB_DATABASE   | 存储账号数据的`mongodb`数据库名称。                               | tmw_account                |
-| TMW_APP_AUTH_CLIENT_MONGODB_COLLECTION | 存储账号数据的`mongodb`集合名称。                                 | account                    |
-| TMW_APP_DATA_CIPHER_KEY                | 数据加密基础 key。                                                |                            |
-| ----                                   |                                                                   |                            |
-| TMW_APP_DEFAULT_CREATETIME             |                                                                   | TMS_DEFAULT_CREATE_TIME    |
-| TMW_APP_DEFAULT_UPDATETIME             |                                                                   | TMS_APP_DEFAULT_UPDATETIME |
-| TMW_APP_DATA_ACTION_LOG                |                                                                   | TMS_APP_DATA_ACTION_LOG    |
-| TMW_APP_BODY_JSON_LIMIT                | 配置 JSON 文件上传限制大小                                        | 1mb                        |
-| **插件（plugin.js）**                  |                                                                   |                            |
-| TMW_APP_PLUGIN_DIR                     | 指定插件文件目录。如果有多个目录用半角逗号分隔。                  |                            |
-| **日志（log4js.js）**                  |                                                                   |                            |
-| TMW_APP_LOG4JS_LEVEL                   |                                                                   | debug                      |
-| **mongodb**                            |                                                                   |                            |
-| TMW_MONGODB_HOST                       | mongodb 数据库连接地址。                                          | host.docker.internal       |
-| TMW_MONGODB_PORT                       |                                                                   | 27017                      |
-| TMW_MONGODB_USER                       |                                                                   | root                       |
-| TMW_MONGODB_PASSWORD                   |                                                                   | root                       |
-| **fs**                                 |                                                                   |                            |
-| TMW_FINDER_FS_CUSTOMNAME               |                                                                   |                            |
-| **redis**                              |                                                                   |                            |
-| TMS_REDIS_DISABLED                     |                                                                   | yes                        |
-| TMS_REDIS_PREFIX                       |                                                                   |                            |
-| TMS_REDIS_HOST                         |                                                                   |                            |
-| TMS_REDIS_PORT                         |                                                                   |                            |
-| TMS_REDIS_PWD                          |                                                                   |                            |
-| TMS_REDIS_EXPIRESIN                    |                                                                   |                            |
-| **webhook**                            |                                                                   |                            |
-| TMW_APP_WEBHOOK                        | 指定的 webhook 回调地址。                                         |                            |
+| 环境变量                               | 用途                                                                                                                      | 默认值                     |
+| -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | -------------------------- |
+| **应用（app.js）**                     |                                                                                                                           |                            |
+| TMW_APP_NAME                           | 后端服务名称。                                                                                                            | tms-mongodb-web            |
+| TMW_APP_PORT                           | 后端服务端口 。                                                                                                           | 3000                       |
+| TMW_APP_ROUTER_AUTH                    | 后端服务认证接口前缀。                                                                                                    | auth                       |
+| TMW_APP_ROUTER_CONTROLLER              | 后端服务控制器接口前缀。                                                                                                  | api                        |
+| TMW_APP_ROUTER_PLUGIN                  |                                                                                                                           | plugin                     |
+| TMW_APP_ROUTER_FSDOMAIN                |                                                                                                                           | fs                         |
+| TMW_APP_AUTH_JWT_KEY                   | JWT 认证方式的服务端私有密钥。                                                                                            | 随机值                     |
+| TMW_APP_AUTH_JWT_EXPIRESIN             | JWT 认证方式的服务端 token 有效期。                                                                                       | 3600                       |
+| TMW_APP_AUTH_CAPTCHA_DISABLED          | 是否关闭验证码功能，值为`true`或`yes`时关闭，不区分大小写。                                                               | 开启                       |
+| TMW_APP_AUTH_CAPTCHA_STORAGE           | 验证码存储类型，支持：`redis\lowdb`。                                                                                     | lowdb                      |
+| TMW_APP_AUTH_CAPTCHA_REDIS_NAME        | 如果使用`redis`存储验证码，对应的`redis`连接名称。                                                                        | master                     |
+| TMW_APP_AUTH_CLIENT_DISABLED           | 是否开启账号管理模块功能，值为`true`或`yes`时关闭，不区分大小写。                                                         | 开启                       |
+| TMW_APP_AUTH_CLIENT_MONGODB_NAME       | 存储账号数据的`mongodb`在`mongodb.js`中的名称。                                                                           | master                     |
+| TMW_APP_AUTH_CLIENT_MONGODB_DATABASE   | 存储账号数据的`mongodb`数据库名称。                                                                                       | tmw_account                |
+| TMW_APP_AUTH_CLIENT_MONGODB_COLLECTION | 存储账号数据的`mongodb`集合名称。                                                                                         | account                    |
+| TMW_APP_DATA_CIPHER_KEY                | 数据加密基础 key。                                                                                                        |                            |
+| ----                                   |                                                                                                                           |                            |
+| TMW_APP_DEFAULT_CREATETIME             |                                                                                                                           | TMS_DEFAULT_CREATE_TIME    |
+| TMW_APP_DEFAULT_UPDATETIME             |                                                                                                                           | TMS_APP_DEFAULT_UPDATETIME |
+| TMW_APP_DATA_ACTION_LOG                |                                                                                                                           | TMS_APP_DATA_ACTION_LOG    |
+| TMW_APP_BODY_JSON_LIMIT                | 配置 JSON 文件上传限制大小                                                                                                | 1mb                        |
+| **插件（plugin.js）**                  |                                                                                                                           |                            |
+| TMW_APP_PLUGIN_DIR                     | 指定插件文件目录。如果有多个目录用半角逗号分隔。                                                                          |                            |
+| **日志（log4js.js）**                  |                                                                                                                           |                            |
+| TMW_APP_LOG4JS_LEVEL                   |                                                                                                                           | debug                      |
+| **mongodb**                            |                                                                                                                           |                            |
+| TMW_MONGODB_HOST                       | mongodb 数据库连接地址。                                                                                                  | host.docker.internal       |
+| TMW_MONGODB_PORT                       |                                                                                                                           | 27017                      |
+| TMW_MONGODB_USER                       |                                                                                                                           | root                       |
+| TMW_MONGODB_PASSWORD                   |                                                                                                                           | root                       |
+| **fs**                                 |                                                                                                                           |                            |
+| TMW_FINDER_FS_CUSTOMNAME               |                                                                                                                           |                            |
+| **redis**                              |                                                                                                                           |                            |
+| TMS_REDIS_DISABLED                     |                                                                                                                           | yes                        |
+| TMS_REDIS_PREFIX                       |                                                                                                                           |                            |
+| TMS_REDIS_HOST                         |                                                                                                                           |                            |
+| TMS_REDIS_PORT                         |                                                                                                                           |                            |
+| TMS_REDIS_PWD                          |                                                                                                                           |                            |
+| TMS_REDIS_EXPIRESIN                    |                                                                                                                           |                            |
+| **webhook**                            |                                                                                                                           |                            |
+| TMW_APP_WEBHOOK                        | 指定的 webhook 回调地址。                                                                                                 |                            |
+| TMW_APP_WEBHOOK_EVENT                  | 指定的 webhook 回调地址包括的事件类型。可以指定`before`，`after`，`beforeCreate`，`afterCreate`等。多个值之间用逗号分隔。 |                            |
+| TMW_APP_WEBHOOK_WHITELIST_DB           |                                                                                                                           |                            |
+| TMW_APP_WEBHOOK_WHITELIST_CL           |                                                                                                                           |                            |
+| TMW_APP_WEBHOOK_BLACKLIST_DB           |                                                                                                                           |                            |
+| TMW_APP_WEBHOOK_BLACKLIST_CL           |                                                                                                                           |                            |
+| TMW_APP_WEBHOOK_SPECIFIC\_\_\_         | 指定数据库和集合的 webhook。`SPECIFIC`后面下划线分隔数据库名和集合名。                                                    |                            |
+| TMW_APP_WEBHOOK_SPECIFIC\_\_\_EVENT    | 指定数据库和集合的 webhook 包含的事件。`SPECIFIC`后面下划线分隔数据库名和集合名。                                         |                            |
+| TMW_APP_WEBHOOK_ACCOUNT                | 指定的预制账号管理插件的 webhook 回调地址。                                                                               |                            |
+| TMW_APP_WEBHOOK_ACCOUNT_EVENT          | 指定的预制账号管理插件的 webhook 回调地址包括的事件类型。若不指定支持所有类型。                                           |                            |
 
 # ue_admin
 
