数据初始化工具支持指定数据文件目录

--- a/docs/数据初始化.md
+++ b/docs/数据初始化.md
@@ -12,7 +12,7 @@ node ./dist/db_init -u xxx -p xxx --file xxx
 | -p,--password           | TMW_MONGODB_PASSWORD                | mongodb 的口令。                                                                                                | 无        |
 | --host                  | TMW_MONGODB_HOST                    | mongodb 连接地址。                                                                                              | localhost |
 | --port                  | TMW_MONGODB_PORT                    | mongodb 连接端口。                                                                                              | 27017     |
-| --file                  | TMW_DB_INIT_DATA_FILE               | 初始化数据文件路径。                                                                                            | 无        |
+| --file                  | TMW_DB_INIT_DATA_FILE               | 初始化数据文件路径。可以是文或目录。文件为 json 或导出 json 的 js。                                             | 无        |
 | --replaceExistingSchema | TMW_DB_INIT_REPLACE_EXISTING_SCHEMA | 当存在`title`相同的`schema`时替换已有数据。                                                                     | false     |
 | --allowReuseSchema      | TMW_DB_INIT_ALLOW_REUSE_SCHEMA      | 当存在`title`相同的`schema`时允许继续操作。replaceExistingSchema=true 时忽略改选项。                            | false     |
 | --doc-create-mode       | TMW_DB_INIT_DOC_CREATE_MODE         | 当集合中已经存在文档，处理新建文档的模式，stop：有数据就不执行；override：清除现有数据后新建；merge：直接新建。 | stop      |
