优化数据初始化工具

--- a/docs/数据初始化.md
+++ b/docs/数据初始化.md
@@ -1,7 +1,7 @@
 # 命令行
 
 ```bash
-node ./dist/db_init -u xxx -p xxx --file xxx
+DEBUG=tmw:db_init node ./dist/db_init -u xxx -p xxx --file xxx
 ```
 
 ## 命令行参数
@@ -73,3 +73,22 @@ console.log(hex) // output: 62617463685f6e6f74696365
   }
 ]
 ```
+
+# 启动时自动执行
+
+如果在`config`目录下存在`dbinit.js`配置文件，那么 TMW 启动时，会根据配置文件的参数自动执行数据初始化操作。
+
+```js
+module.exports = {
+  rules: [
+    {
+      file: '数据文件或目录',
+      replaceExistingSchema: false,
+      allowReuseSchema: false,
+      docCreateMode: 'stop',
+    },
+  ],
+}
+```
+
+配置文件支持指定多条数据初始化规则，每条规则对应 1 个文件或目录并指定数据处理规则。
