添加数据库管理插件

--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -27,6 +27,7 @@
 | TMW_APP_BODY_JSON_LIMIT                | 配置 JSON 文件上传限制大小                                                                                                | 1mb                     |
 | **插件（plugin.js）**                  |                                                                                                                           |                         |
 | TMW_APP_PLUGIN_DIR                     | 指定插件文件目录。如果有多个目录用半角逗号分隔。                                                                          |                         |
+| TMW_PLUGIN_WIDGET_URL_HOST             | 提供插件前端页面的服务地址。                                                                                              |                         |
 | **日志（log4js.js）**                  |                                                                                                                           |                         |
 | TMW_APP_LOG4JS_LEVEL                   |                                                                                                                           | debug                   |
 | **mongodb**                            |                                                                                                                           |                         |
