--- a/docs/开放端接口.md
+++ b/docs/开放端接口.md
@@ -1,3 +1,72 @@
-api 列表
+# 接口清单
 
-访问结果映射规则
+| API                   | HTTP 方法 | 说明                                           |
+| --------------------- | --------- | ---------------------------------------------- |
+| /open/document/get    | GET       | 获得指定数据库指定集合中指定 id 的文档。       |
+| /open/document/list   | POST/GET  | 获得指定数据库指定集合中符合条件的文档里列表。 |
+| /open/document/create | POST      | 在指定数据库指定集合中新建文档。               |
+
+# 接口说明
+
+## 获得指定文档
+
+**url**
+
+> /open/document/get
+
+**查询参数**
+
+| 名称   | 类型   | 必填 | 默认值 | 说明                 |
+| ------ | ------ | ---- | ------ | -------------------- |
+| db     | string | 是   | 无     | 文档所属数据库名称   |
+| cl     | string | 是   | 无     | 文档所属集合名称     |
+| id     | string | 是   | 无     | 文档 id              |
+| fields | string | 否   | 无     | 逗号分隔的字段名称。 |
+
+**返回结果**
+
+| 返回参数 | 参数类型 | 参数说明      |
+| -------- | -------- | ------------- |
+| code     | integer  | 执行结果 code |
+| msg      | string   | 执行结果说明  |
+| result   | object   | 文档数据      |
+
+## 获得文档列表
+
+**url**
+
+> /open/document/list
+
+**查询参数**
+
+| 名称   | 类型    | 必填 | 默认值 | 说明                 |
+| ------ | ------- | ---- | ------ | -------------------- |
+| db     | string  | 是   | 无     | 文档所属数据库名称   |
+| cl     | string  | 是   | 无     | 文档所属集合名称     |
+| fields | string  | 否   | 无     | 逗号分隔的字段名称。 |
+| tags   | string  | 否   | 无     | 逗号分隔的标签名称。 |
+| page   | integer | 否   | 无     | 数据起始页。         |
+| size   | integer | 否   | 无     | 每页包含的记录数。   |
+
+**消息体**
+
+| 名称    | 类型   | 必填 | 默认值 | 说明                             |
+| ------- | ------ | ---- | ------ | -------------------------------- |
+| filter  | object | 否   | 无     | 根据文档字段对返回结果过滤条件。 |
+| orderBy | object | 否   | 无     | 根据文档字段对返回结果排序条件。 |
+
+**返回结果**
+
+| 返回参数     | 参数类型 | 参数说明                       |
+| ------------ | -------- | ------------------------------ |
+| code         | integer  | 执行结果 code                  |
+| msg          | string   | 执行结果说明                   |
+| result       | object   |                                |
+| result.docs  | array    | 符合条件的文档数据（当前页）。 |
+| result.total | integer  | 符合条件的文档总数（集合中）。 |
+
+## 新建文档
+
+**url**
+
+> /open/document/create
