--- a/docs/集合对接向量数据库支持语义搜索.md
+++ b/docs/集合对接向量数据库支持语义搜索.md
@@ -28,12 +28,12 @@
 
 语言大模型名称
 
-| 环境变量                                   | 说明                                                                         | 默认值    |
-| ------------------------------------------ | ---------------------------------------------------------------------------- | --------- |
-| TMW_PLUGIN_CL_VECDB_LLM_MODEL_NAME         | 模式使用的语言大模型。                                                       |           |
-| TMW_PLUGIN_CL_VECDB_STORE_ROOT             | 向量数据库默认存储位置。为了安全，要求指定的目录必须存在，否则插件无法启用。 | `./vecdb` |
-| TMW_PLUGIN_CL_VECDB_VECDBKIT_NPM_SPECIFIER | 便于调试。                                                                   |           |
-| TMW_PLUGIN_CL_VECDB_CL_DOC_LIST_URL        | 获取指定集合下文档的 api 地址。                                              |           |
+| 环境变量                                 | 说明                                                                         | 默认值    |
+| ---------------------------------------- | ---------------------------------------------------------------------------- | --------- |
+| TMW_PLUGIN_CL_VECDB_LLM_MODEL_NAME       | 模式使用的语言大模型。                                                       |           |
+| TMW_PLUGIN_CL_VECDB_STORE_ROOT           | 向量数据库默认存储位置。为了安全，要求指定的目录必须存在，否则插件无法启用。 | `./vecdb` |
+| TMW_PLUGIN_CL_VECDB_LLMKIT_NPM_SPECIFIER | 便于调试。                                                                   |           |
+| TMW_PLUGIN_CL_VECDB_MONGO_CONN_URL       | mongodb 数据库的连接地址。                                                   |           |
 
 `HNSWLib`
 
