--- a/docs/插件机制.md
+++ b/docs/插件机制.md
@@ -208,7 +208,7 @@ API 详细说明参见在线文档。
 `plugins/myplugin.js`
 
 ```js
-const { PluginHttpSendDocs } = require('../models/plugin')
+const { PluginHttpSendDocs } = await import('../models/plugin')
 /**
  * 演示插件
  * @extends PluginHttpSendDocs
