--- a/docs/数据初始化.md
+++ b/docs/数据初始化.md
@@ -79,7 +79,7 @@ console.log(hex) // output: 62617463685f6e6f74696365
 如果在`config`目录下存在`dbinit.js`配置文件，那么 TMW 启动时，会根据配置文件的参数自动执行数据初始化操作。
 
 ```js
-module.exports = {
+export default {
   rules: [
     {
       file: '数据文件或目录',
@@ -92,3 +92,9 @@ module.exports = {
 ```
 
 配置文件支持指定多条数据初始化规则，每条规则对应 1 个文件或目录并指定数据处理规则。
+
+**注意**：数据初始化文件应该是到处 JSON 数据的模块。
+
+```js
+export default []
+```
