支持通过环境变量指定管理员账号和密码

--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -15,6 +15,8 @@
 | TMW_APP_AUTH_CAPTCHA_STORAGE           | 验证码存储类型，支持：`redis\lowdb`。                                                                                     | lowdb                   |
 | TMW_APP_AUTH_CAPTCHA_REDIS_NAME        | 如果使用`redis`存储验证码，对应的`redis`连接名称。                                                                        | master                  |
 | TMW_APP_AUTH_CLIENT_DISABLED           | 是否开启账号管理模块功能，值为`true`或`yes`时关闭，不区分大小写。                                                         | 开启                    |
+| TMW_APP_AUTH_CLIENT_ADMIN_USERNAME     | 管理员账号名。                                                                                                            | admin                   |
+| TMW_APP_AUTH_CLIENT_ADMIN_PASSWORD     | 管理员密码。                                                                                                              | admin                   |
 | TMW_APP_AUTH_CLIENT_MONGODB_NAME       | 存储账号数据的`mongodb`在`mongodb.js`中的名称。                                                                           | master                  |
 | TMW_APP_AUTH_CLIENT_MONGODB_DATABASE   | 存储账号数据的`mongodb`数据库名称。                                                                                       | tmw_account             |
 | TMW_APP_AUTH_CLIENT_MONGODB_COLLECTION | 存储账号数据的`mongodb`集合名称。                                                                                         | account                 |
