--- a/docs/元数据.md
+++ b/docs/元数据.md
@@ -54,40 +54,45 @@
 
 ## 集合（type=collection）
 
-| 字段                       | 说明                                                                                                             | 类型     | 必填 |
-| -------------------------- | ---------------------------------------------------------------------------------------------------------------- | -------- | ---- |
-| \_id                       | `mongodb`内部`id`                                                                                                | ObjectId | 是   |
-| type                       | 等于`collection`，不可修改。                                                                                     | string   | 是   |
-| bucket                     | 集合所属存储空间                                                                                                 | string   | 否   |
-| database                   | 引用数据库对象的`name`字段。（应该去掉，由`db.name`代替）                                                        | string   | 是   |
-| db                         |                                                                                                                  | object   | 是   |
-| db.sysname                 | 引用数据库对象的`sysname`字段。                                                                                  | string   | 是   |
-| db.name                    | 引用数据库对象的`name`字段。                                                                                     | string   | 是   |
-| sysname                    | 在`mongodb`中的集合名。系统自动分配，在数据库中唯一。创建后不可修改。                                            |          | 是   |
-| name                       | 英文名，`mongodb`中创建的集合名称。在每个`database`内唯一。                                                      | string   | 是   |
-| title                      | 中文名                                                                                                           | string   | 否   |
-| description                | 说明                                                                                                             | string   | 否   |
-| schema_id                  | 集合中文档对应的扩展字段定义 id。                                                                                | ObjectId | 否   |
-| tags                       | 集合标签名称（tag.name）的数组。                                                                                 | string[] | 否   |
-| default_tag                |                                                                                                                  |          | 否   |
-| usage                      | 集合用途，`0`或**不指定**为普通集合，`1`为复制集合的从集合。                                                     | number   | 否   |
-| custom                     | 用户定制项设置                                                                                                   | object   | 否   |
-| custom.docFilters          | 文档筛选条件，目前仅支持设置 1 个条件                                                                            | object[] | 否   |
-| custom.docFilters[].title  | 筛选条件名称                                                                                                     | string   | 否   |
-| custom.docFilters[].type   | 筛选条件类型，目前仅支持`group`，多级分类筛选                                                                    | string   | 否   |
-| custom.docFilters[].data   | 多级分类筛选的列 id 列表                                                                                         | string[] | 否   |
-| custom.docOperations       | 支持的默认操作，可以关闭指定操作（默认不关闭），包括：`create, edit, remove, editMany, removeMany, transferMany` | object   | 否   |
-| custom.docRemoveConstraint | 删除文档的限制条件。符合 MongoDB 的查询条件。                                                                    | object   | 否   |
+| 字段                             | 说明                                                                                                             | 类型     | 必填 |
+| -------------------------------- | ---------------------------------------------------------------------------------------------------------------- | -------- | ---- |
+| \_id                             | `mongodb`内部`id`                                                                                                | ObjectId | 是   |
+| type                             | 等于`collection`，不可修改。                                                                                     | string   | 是   |
+| bucket                           | 集合所属存储空间                                                                                                 | string   | 否   |
+| ~~database~~                     | 引用数据库对象的`name`字段。（应该去掉，由`db.name`代替）                                                        | string   | 是   |
+| db                               |                                                                                                                  | object   | 是   |
+| db.sysname                       | 引用数据库对象的`sysname`字段。                                                                                  | string   | 是   |
+| db.name                          | 引用数据库对象的`name`字段。                                                                                     | string   | 是   |
+| sysname                          | 在`mongodb`中的集合名。系统自动分配，在数据库中唯一。创建后不可修改。                                            |          | 是   |
+| name                             | 英文名，`mongodb`中创建的集合名称。在每个`database`内唯一。                                                      | string   | 是   |
+| title                            | 中文名                                                                                                           | string   | 否   |
+| description                      | 说明                                                                                                             | string   | 否   |
+| schema_id                        | 集合中文档对应的扩展字段定义 id。                                                                                | ObjectId | 否   |
+| usage                            | 集合用途，`0`或**不指定**为普通集合，`1`为复制集合的从集合。                                                     | number   | 否   |
+| tags                             | 集合标签名称（tag.name）的数组。                                                                                 | string[] | 否   |
+| default_tag                      |                                                                                                                  |          | 否   |
+| dir_full_name                    | 集合分类名称，例如：dir01/dir02。用于对集合进行分级分类检索。 置                                                 | string   | 否   |
+| custom                           | 用户定制项设置                                                                                                   | object   | 否   |
+| custom.docFilters                | 文档筛选条件，目前仅支持设置 1 个条件                                                                            | object[] | 否   |
+| custom.docFilters[].title        | 筛选条件名称                                                                                                     | string   | 否   |
+| custom.docFilters[].type         | 筛选条件类型，目前仅支持`group`，多级分类筛选                                                                    | string   | 否   |
+| custom.docFilters[].data         | 多级分类筛选的列 id 列表                                                                                         | string[] | 否   |
+| custom.docOperations             | 支持的默认操作，可以关闭指定操作（默认不关闭），包括：`create, edit, remove, editMany, removeMany, transferMany` | object   | 否   |
+| custom.docRemoveConstraint       | 删除文档的限制条件。符合 MongoDB 的查询条件。                                                                    | object   | 否   |
+| operateRules                     |                                                                                                                  |          |      |
+| operateRules.unrepeat            | 去重规则是怎么用？                                                                                               |          |      |
+| operateRules.unrepeat.database   |                                                                                                                  |          |      |
+| operateRules.unrepeat.collection |                                                                                                                  |          |      |
 
 ## 文档列定义（type=schema）
 
 | 字段   | 说明                                                             | 必填 |
-| ------ | ---------------------------------------------------------------- | ---- | --- |
+| ------ | ---------------------------------------------------------------- | ---- |
 | \_id   | `mongodb`内部`id`                                                | 是   |
 | type   | 等于`schema`，不可修改。                                         | 是   |
 | bucket | 扩展字段定义所属存储空间                                         | 否   |
 | title  | 中文名                                                           | 否   |
-| scope  | 适用对象类型：文档（document），数据库（db）或集合（collection） |      | 是  |
+| scope  | 适用对象类型：文档（document），数据库（db）或集合（collection） | 是   |
 | body   | `json-schema`数据                                                | 否   |
 
 # 预制管理对象（tms_admin/bucket_preset_object）
