支持给数据库下的集合添加扩展属性

--- a/docs/元数据.md
+++ b/docs/元数据.md
@@ -40,17 +40,16 @@
 
 ## 数据库（type=database）
 
-| 字段          | 说明                                                                       | 必填 |
-| ------------- | -------------------------------------------------------------------------- | ---- |
-| \_id          | `mongodb`内部`id`                                                          | 是   |
-| type          | 等于`database`，不可修改。                                                 | 是   |
-| bucket        | 数据库所属存储空间                                                         | 否   |
-| sysname       | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 | 是   |
-| name          | 英文名。在每个`bucket`内唯一。                                             | 是   |
-| title         | 中文名                                                                     | 是   |
-| description   | 说明                                                                       | 否   |
-| top           | 是否置顶。值为`top`时置顶。                                                | 否   |
-| entensionInfo | 存放用户自定义的数据库描述信息                                             | 否   |
+| 字段         | 说明                                                                       | 必填 |
+| ------------ | -------------------------------------------------------------------------- | ---- |
+| \_id         | `mongodb`内部`id`                                                          | 是   |
+| type         | 等于`database`，不可修改。                                                 | 是   |
+| bucket       | 数据库所属存储空间                                                         | 否   |
+| sysname      | 在`mongodb`中的数据库名。系统自动分配，在`mongodb`中唯一。创建后不可修改。 | 是   |
+| name         | 英文名。在每个`bucket`内唯一。                                             | 是   |
+| title        | 中文名                                                                     | 是   |
+| description  | 说明                                                                       | 否   |
+| cl_schema_id | 数据库中对应的扩展字段定义 id。                                            | 否   |
 
 ## 集合（type=collection）
 
@@ -67,7 +66,7 @@
 | name                             | 英文名，`mongodb`中创建的集合名称。在每个`database`内唯一。                                                      | string   | 是   |
 | title                            | 中文名                                                                                                           | string   | 否   |
 | description                      | 说明                                                                                                             | string   | 否   |
-| schema_id                        | 集合中文档对应的扩展字段定义 id。                                                                                | ObjectId | 否   |
+| schema_id                        | 集合中文档对应的扩展字段定义 id。                                                                                | string   | 否   |
 | usage                            | 集合用途，`0`或**不指定**为普通集合，`1`为复制集合的从集合。                                                     | number   | 否   |
 | tags                             | 集合标签名称（tag.name）的数组。                                                                                 | string[] | 否   |
 | default_tag                      |                                                                                                                  |          | 否   |
