--- a/docs/数据库集合分类目录.md
+++ b/docs/数据库集合分类目录.md
@@ -2,34 +2,48 @@
 
 collection_dir
 
-| 字段名      | 标题名                                |
-| ----------- | ------------------------------------- |
-| name        | 系统名（英文）                        |
-| title       | 显示名（中文）                        |
-| full_name   | 完整名称                              |
-| description | 备注                                  |
-| level       | 分类的层级，从 1 开始。为了便于排序。 |
-| order       | 在父节点下的排序                      |
-| db.sysname  | 所属数据库系统名称                    |
-| db.name     | 所属数据库名称                        |
-| bucket      | 所属空间名称                          |
+| 字段名      | 标题名                                                                                       |
+| ----------- | -------------------------------------------------------------------------------------------- |
+| name        | 系统名（英文）。不允许包含反斜杠。                                                           |
+| title       | 显示名（中文）                                                                               |
+| full_name   | 完整名称。包含所有的上级分类和自身的名称。用反斜杠分隔每级的名称。在同一数据库下不允许重复。 |
+| description | 备注                                                                                         |
+| level       | 分类的层级，从 1 开始。为了便于排序。                                                        |
+| order       | 在父节点下的排序                                                                             |
+| db.sysname  | 所属数据库系统名称                                                                           |
+| db.name     | 所属数据库名称                                                                               |
+| bucket      | 所属空间名称                                                                                 |
 
-新建
+`name`和`full_name`可以在新建分类时指定，创建后不允许修改。
+
+`db`，`bucket`，`level`自动生成，不允许修改。
+
+# 操作
+
+在数据库列表页，单条数据库对象的【更多/进入集合分类】。
+
+通过调整属性`order`指定分类的排序。
+
+# 接口
+
+## 新建
 
 ```sh
 curl -X POST -H 'Content-Type: application/json' "http://localhost:6030/api/admin/cldir/create?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01" -d '{"name":"dir-1","title":"目录-1"}'
 ```
 
-删除
+## 更新
+
+## 删除
 
 ```sh
 curl "http://localhost:6030/api/admin/cldir/remove?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01&id=65ba5911a53d64abb19d271b"
 ```
 
-查找
+如果有下级集合分类，不允许删除。
+
+## 查找
 
 ```sh
 curl "http://localhost:6030/api/admin/cldir/list?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01"
 ```
-
-排序？
