优化管理对象分类目录相关代码

--- a/docs/给管理对象指定分类目录.md
+++ b/docs/给管理对象指定分类目录.md
@@ -1,11 +1,12 @@
 支持在数据中设置集合分类目录，实现对数据库中的集合分级分类管理。
 
-collection_dir
+mongodb_object_dir
 
 | 字段名      | 标题名                                                                                       |
 | ----------- | -------------------------------------------------------------------------------------------- |
 | name        | 系统名（英文）。不允许包含反斜杠。                                                           |
 | title       | 显示名（中文）                                                                               |
+| scope       | 适用范围，保罗：collection 和 document。（目前仅支持 collection）                            |
 | full_name   | 完整名称。包含所有的上级分类和自身的名称。用反斜杠分隔每级的名称。在同一数据库下不允许重复。 |
 | description | 备注                                                                                         |
 | level       | 分类的层级，从 1 开始。为了便于排序。                                                        |
@@ -14,7 +15,7 @@ collection_dir
 | db.name     | 所属数据库名称                                                                               |
 | bucket      | 所属空间名称                                                                                 |
 
-`name`和`full_name`可以在新建分类时指定，创建后不允许修改。
+`name`，`full_name`，`scope`可以在新建分类时指定，创建后不允许修改。
 
 `db`，`bucket`，`level`自动生成，不允许修改。
 
@@ -47,3 +48,7 @@ curl "http://localhost:6030/api/admin/cldir/remove?access_token=eyJhbGciOiJIUzI1
 ```sh
 curl "http://localhost:6030/api/admin/cldir/list?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01"
 ```
+
+根据`level+order`进行排序。
+
+自动生成`full_title`字段。
