--- a/docs/给管理对象指定分类目录.md
+++ b/docs/给管理对象指定分类目录.md
@@ -1,6 +1,56 @@
-支持在数据中设置集合分类目录，实现对数据库中的集合分级分类管理。
+有时在一个数据库下可能有很多集合，为了便于管理，用户希望采用分类目录的方式进行管理。
 
-mongodb_object_dir
+`TMW`支持在数据级别设置针对集合分类目录，实现对数据库中的集合分级分类管理。
+
+# 操作
+
+在数据库列表页，单条数据库对象的【更多/进入集合分类】。
+
+通过调整属性`order`指定分类的排序。
+
+如果数据库指定了集合分类目录，进入数据库的集合列表页时，会在列表页左侧显示分类目录树，选中一个分类目录，会筛选集合列表，若执行【添加集合】，新建的集合就属于这个分类目录。集合的所属分类目录不支持修改。
+
+# 接口
+
+## 新建
+
+```sh
+curl -X POST -H 'Content-Type: application/json' "http://localhost:6030/api/admin/dir/create?access_token=xxx&db=db01" -d '{"name":"dir-1","title":"目录-1","parentFullName":""}'
+```
+
+分类目录名称命名规则：`^[a-zA-Z]+[0-9a-zA-Z_-]{0,63}$`。
+
+新建分类目录时，1、检查分类目录名称是否符合命名规则；2、不检查是否存在父分类目录；3、检查新的分类目录的全名是否已经存在，若存在，不允许新建。
+
+## 更新
+
+```sh
+curl -X POST -H 'Content-Type: application/json' "http://localhost:6030/api/admin/dir/update?access_token=xxx&db=db01" -d '{"title":"目录-1","order":1,"description":""}'
+```
+
+只允许修改`title`，`order`，`description`三个字段。
+
+## 删除
+
+```sh
+curl "http://localhost:6030/api/admin/dir/remove?access_token=xxx&db=db01&id=65ba5911a53d64abb19d271b"
+```
+
+检查是否有下级分类目录，若存在，不允许删除；不检查分类目录是否已经被引用。
+
+## 查找数据下定义分类目录
+
+```sh
+curl "http://localhost:6030/api/admin/dir/list?access_token=xxx&db=db01"
+```
+
+根据`level+order`进行排序。
+
+自动生成`full_title`字段。
+
+# 数据
+
+分类目录数据保存在管理数据库的集合`tms_admin/mongodb_object_dir`中。
 
 | 字段名      | 标题名                                                                                       |
 | ----------- | -------------------------------------------------------------------------------------------- |
@@ -18,37 +68,3 @@ mongodb_object_dir
 `name`，`full_name`，`scope`可以在新建分类时指定，创建后不允许修改。
 
 `db`，`bucket`，`level`自动生成，不允许修改。
-
-# 操作
-
-在数据库列表页，单条数据库对象的【更多/进入集合分类】。
-
-通过调整属性`order`指定分类的排序。
-
-# 接口
-
-## 新建
-
-```sh
-curl -X POST -H 'Content-Type: application/json' "http://localhost:6030/api/admin/cldir/create?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01" -d '{"name":"dir-1","title":"目录-1"}'
-```
-
-## 更新
-
-## 删除
-
-```sh
-curl "http://localhost:6030/api/admin/cldir/remove?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01&id=65ba5911a53d64abb19d271b"
-```
-
-如果有下级集合分类，不允许删除。
-
-## 查找
-
-```sh
-curl "http://localhost:6030/api/admin/cldir/list?access_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluIiwiZGF0YSI6eyJ1c2VybmFtZSI6ImFkbWluIn0sImlzQWRtaW4iOnRydWUsImFsbG93TXVsdGlMb2dpbiI6ZmFsc2UsImV4cGlyZXNJbiI6MCwiaWF0IjoxNzA2NzA1MTUzLCJleHAiOjE3MDY3OTE1NTN9.9URs7obXALUNBbPVRcnlaiOH1dsHPzpG-xT2pTXsu6Y&db=db01"
-```
-
-根据`level+order`进行排序。
-
-自动生成`full_title`字段。
