支持给数据库设置访问控制列表

--- a/docs/多租户.md
+++ b/docs/多租户.md
@@ -8,7 +8,7 @@
 
 使用集合`bucket_invite_log`记录邀请信息。`bucket`的创建者可以创建邀请，邀请包含邀请码、昵称和有效期。有账号的用户通过登录后，接受邀请，加入`bucket`的授权用户列表中。
 
-# 系统端（ue_system）
+# ~~系统端（ue_system）~~
 
 进行系统级设置，例如：创建`bucket`时自动创建`database`，`collection`和`schema`。
 
@@ -20,7 +20,7 @@
 
 `bucket`的创建者通过邀请方式授权其他用户访问。
 
-# 用户端
+# ~~用户端~~
 
 选择进入有访问权限的`bucket`。
 
