集合支持设置访问控制列表

--- a/docs/数据权限.md
+++ b/docs/数据权限.md
@@ -1,8 +1,12 @@
 # 仅管理员可见
 
-# 仅创建者可见
+数据库和集合支持设置为仅管理员可见。
 
 # 访问列表中成员可见
+
+数据库和集成支持设置访问控制列表。
+
+**注意**：对象的创建人总是有权限。
 
 `tms_admin.mongo_object_acl`
 
