--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -23,6 +23,9 @@
 | TMW_APP_DATA_CIPHER_KEY                | 数据加密基础 key。                                                                                                        |                         |
 | ----                                   |                                                                                                                           |                         |
 | TMW_APP_META_ADMIN_DB                  | 记录用户添加的数据库、集合、文档对象信息的数据库。                                                                        | tms_admin               |
+| TMW_APP_DEFAULT_ACLCHECK_DB            | 数据库默认开启访问控制（yes/true）。                                                                                      |                         |
+| TMW_APP_DEFAULT_ACLCHECK_CL            | 集合默认开启访问控制（yes/true）。                                                                                        |                         |
+| TMW_APP_DEFAULT_ACLCHECK_DOC           | 文档默认开启访问控制（yes/true）。                                                                                        |                         |
 | TMW_APP_CREATETIME                     | 给文档添加创时间字段。（日期时间格式的字符串，例如：2022-10-30 14:49:38）                                                 | TMW_CREATETIME          |
 | TMW_APP_UPDATETIME                     | 给文档创建修改时间字段。（日期时间格式的字符串，例如：2022-10-30 14:49:38）                                               | TMW_UPDATETIME          |
 | TMW_APP_TAGS                           | 给文档创建标签字段。（标签文本的数组，例如：`["标签1"，"标签2"]`）                                                        | TMW_TAGS                |
