支持基于访问控制列表给用户设置操作权限

--- a/docs/数据权限.md
+++ b/docs/数据权限.md
@@ -19,9 +19,18 @@
 ```json
 {
   "target": { "id": "", "type": "database" },
-  "acl": [{ "user": { "id": "" }, "right": [""] }]
+  "acl": [{ "user": { "id": "" }, "right": {} }]
 }
 ```
+
+如果`right`为空数组，代表不进行权限限制。
+
+| 对象   | 权限    | 说明                                               |
+| ------ | ------- | -------------------------------------------------- |
+| 数据库 | read    | 只可以读数据库信息，不允许修改。默认允许修改。     |
+| 数据库 | readCl  | 可以读数据库中的文档，不可以添加、删除和修改集合。 |
+| 集合   | read    | 只可以读集合信息，不允许修改。默认允许修改。       |
+| 集合   | readDoc | 可以读集合中的文档，不可以添加、删除和修改文档。   |
 
 ## api
 
